2011-04-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/common/tcommand.py:
	  Since any command can be run in a loop, commands should not
	  invoke the reactor directly to stop.

2011-04-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/main.py:
	  Make sure we always have a return value.

2011-04-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/main.py:
	  Move log to main()

2011-04-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/model/couch.py:
	  Remove fromDict, something similar is now in paisley mushin branch.

2011-04-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* bin/mushin-notify:
	  add connectionLost handler

2011-04-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/common/app.py:
	  Set dbName and host.
	* python/mushin/command/list.py:
	* python/mushin/command/main.py:
	  Use app.Server instead for some operations, removing chunks of
	  code.

2011-04-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/list.py:
	* python/mushin/command/main.py:
	* python/mushin/model/couch.py:
	  All view code now uses paisley.  Time to rip out the last
	  bit of couchdb-python ?

2011-04-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/project.py:
	  Use the new views.
	* python/mushin/model/couch.py:
	  Remove last use of Server.db ?

2011-04-07  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/project.py:
	  Convert listing projects to using twisted, step 1.
	  Only user of server.load()
	* python/mushin/model/couch.py:
	  fromDict directly from the dict.

2011-04-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/common/tcommand.py (added):
	  Add a base class for twisted-using Command classes.
	  Should move upstream when done.
